--- a/css/common.css
+++ b/css/common.css
@@ -120,11 +120,13 @@ img.main-image {
 }
 
 .main-text h2 {
+  text-align: center;
   font-size: 2rem;
   margin-top: 40px;
 }
 
 .main-text p {
+  text-align: center;
   font-size: 1.2rem;
   margin-top: 20px;
 }
