--- a/css/responsive.css
+++ b/css/responsive.css
@@ -37,4 +37,16 @@
         width: 24px;
         height: 24px;
     }
+    .swiper-button-prev,
+    .swiper-button-next {
+        /* スマートフォンでは矢印が端に寄りすぎないようマージンを少し増やす */
+        margin: 0 5px; 
+        /* 矢印のサイズを少し小さくしてコンテンツの邪魔にならないようにする */
+        /* font-size: 20px; などの調整も有効です */
+        
+        /* もし矢印が画像に重なりすぎる場合、さらに調整 */
+        /* 例: 左右の配置を内側に寄せる */
+        /* left: 5px; */
+        /* right: 5px; */
+    }
 }
