--- a/css/notebook.css
+++ b/css/notebook.css
@@ -8,18 +8,18 @@ body{
 
 /* letterBook-viewport のスタイルを修正 */
 .letterBook-viewport{
+	position: relative;
+	transform: translate(-3%, -20%);
     overflow:hidden;
     width:100%;
-    height: auto; 
+    height: auto;
     margin: 20px auto; /* 見出しの下の余白 */
     text-align: center;
     
     /* ★フッターとの重なりを解消するために下部にパディングを追加★ */
-    padding-bottom: 120px; /* この値を調整してフッターが隠れないようにする */
 }
 
 .letterBook-viewport .container{
-	position: relative;
 	width:100%;
 	height:100%;
 	margin:auto;
@@ -31,7 +31,7 @@ body{
     width: 70vw;
     height: calc(70vw / 1.536);
     /* turn.js が生成する要素に影響が出ないよう、position: relative 以外は削除 */
-    position: relative; 
+    position: relative;
 }
 
 .letterBook-viewport .page{
