--- a/css/common.css
+++ b/css/common.css
@@ -331,7 +331,7 @@ img.main-image {
   list-style: none;
   padding: 0;
   margin: 0 0 2rem;
-  text-align: right; /* 右揃い */
+  text-align: left; /* 左揃い */
 }
 
 .news-list li {
