--- a/css/common.css
+++ b/css/common.css
@@ -391,6 +391,7 @@ img.main-image {
         width: 60%;
         scale: 0.6;
         height: auto;
+        min-height: 200px;
         flex-shrink: 0;
         padding: 0.8rem
     }
