--- a/css/responsive.css
+++ b/css/responsive.css
@@ -84,3 +84,9 @@
         grid-template-columns: 1fr;
     }
 }
+
+@media (max-width: 440px){
+    .current-page{
+        display: block;
+    }
+}
