背景の変更

--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   background-color: #f8f8f8;
   color: #555;
-  background-image: url("../images/背景.jpg");
+  background-image: url("../images/背景アイコンなし.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
